firefox 59.0rc - added push graphid.

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "WXtFK0QoSO-qnHY2vcE0Fg"
+                ],
+                [
+                    "push",
+                    "QK0wvF5lROqwGPeTI-_KAw"
                 ]
             ],
             "human_tasks": [
