firefox 59.0rc - added ship graphid.

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -16,6 +16,10 @@
                 [
                     "push",
                     "QK0wvF5lROqwGPeTI-_KAw"
+                ],
+                [
+                    "ship",
+                    "CwVx3s3KR0eqIKeY37CMaQ"
                 ]
             ],
             "human_tasks": [
