fennec 59.0rc - added ship graphid.

--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "TfKFXCykQTuPkyAarmpNTw"
+                ],
+                [
+                    "ship",
+                    "eVA6-oBlTbiZa1GlULlivw"
                 ]
             ],
             "human_tasks": [
