firefox 59.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -78,7 +78,7 @@
                     "description": "snap failed with KeyError: '\"status\"'",
                     "future_threat": true,
                     "id": 1,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 },
                 {
