firefox 59.0rc - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -85,7 +85,7 @@
                     "bug": "none",
                     "description": "snap failed with KeyError: '\\\"status\\\"'",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "mihaitabara"
                 },
                 {
