fennec 59.0rc - syncing wiki with current data

--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -15,7 +15,7 @@
                 ],
                 [
                     "ship",
-                    "eVA6-oBlTbiZa1GlULlivw"
+                    "GVR2-lrQRt2QpvTj5TFkxg"
                 ]
             ],
             "human_tasks": [
