--- a/inflight/fennec/fennec-release-59.0.1.json
+++ b/inflight/fennec/fennec-release-59.0.1.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "RhkxrEkfRvKJv6d3K4NQlA"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
