firefox 59.0.1 - updated inflight issue.

--- a/inflight/firefox/firefox-release-59.0.1.json
+++ b/inflight/firefox/firefox-release-59.0.1.json
@@ -42,7 +42,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "snap died with KeyError: '\"status\"'",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
+                }
+            ]
         }
     ],
     "preflight": {
