firefox 59.0.1 - added push graphid.

--- a/inflight/firefox/firefox-release-59.0.1.json
+++ b/inflight/firefox/firefox-release-59.0.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "eQGHNp4jT2yM_G_uP7A3og"
+                ],
+                [
+                    "push",
+                    "OEfbJxwnRYmKEurTLeA3Cw"
                 ]
             ],
             "human_tasks": [
