--- a/inflight/fennec/fennec-release-59.0.1.json
+++ b/inflight/fennec/fennec-release-59.0.1.json
@@ -3,6 +3,26 @@
     "inflight": [
         {
             "aborted": false,
+            "buildnum": 2,
+            "graphids": [],
+            "human_tasks": [
+                {
+                    "alias": "shipit",
+                    "description": "submit to Shipit",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Starting_a_Release#Submit_to_Ship_It",
+                    "resolved": true
+                },
+                {
+                    "alias": "ship",
+                    "description": "push to google play",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/mobile/howto.md",
+                    "resolved": false
+                }
+            ],
+            "issues": []
+        },
+        {
+            "aborted": true,
             "buildnum": 1,
             "graphids": [
                 [
