firefox 59.0.1 - added ship graphid.

--- a/inflight/firefox/firefox-release-59.0.1.json
+++ b/inflight/firefox/firefox-release-59.0.1.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "OEfbJxwnRYmKEurTLeA3Cw"
+                ],
+                [
+                    "ship",
+                    "OipcCH-nQFO7vnvgM8azTA"
                 ]
             ],
             "human_tasks": [
