fennec 59.0.1 - added ship graphid.

--- a/inflight/fennec/fennec-release-59.0.1.json
+++ b/inflight/fennec/fennec-release-59.0.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "SHAgSDNaTrK2_GxA-7eXyA"
+                ],
+                [
+                    "ship",
+                    "bPmyTxXwTjml5Yx_HPnteQ"
                 ]
             ],
             "human_tasks": [
