firefox 59.0.1 - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-59.0.1.json
+++ b/inflight/firefox/firefox-release-59.0.1.json
@@ -55,7 +55,7 @@
                     "bug": "none",
                     "description": "snap died with KeyError: '\"status\"'",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
