firefox 59.0.2 - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-59.0.2.json
+++ b/inflight/firefox/firefox-release-59.0.2.json
@@ -47,7 +47,7 @@
                     "bug": "none",
                     "description": "both ryan and i reran the same repackage task, then ryan cancelled his (latest). i had to cancel the repackage-signing task, then rerun both in order. this could have forced us to do a build2 if it wasn't caught in time. we should consider moving off treeherder and into a releaseduty dashboard, and/or going with stricter handoffs",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
