firefox 59.0.2 - updated inflight issue.

--- a/inflight/firefox/firefox-release-59.0.2.json
+++ b/inflight/firefox/firefox-release-59.0.2.json
@@ -49,6 +49,13 @@
                     "future_threat": true,
                     "resolved": true,
                     "who": "asasaki"
+                },
+                {
+                    "bug": "none",
+                    "description": "release-updates-builder-firefox died trying to use the v4 submitter (buildbot)",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
                 }
             ]
         }
