--- a/inflight/firefox/firefox-release-59.0.2.json
+++ b/inflight/firefox/firefox-release-59.0.2.json
@@ -56,6 +56,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "asasaki"
+                },
+                {
+                    "bug": "none",
+                    "description": "snap failed",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
                 }
             ]
         }
