firefox 59.0.2 - added push graphid.

--- a/inflight/firefox/firefox-release-59.0.2.json
+++ b/inflight/firefox/firefox-release-59.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "C8N0d-bATh61Ao8qwA-i_Q"
+                ],
+                [
+                    "push",
+                    "ScnkAhV0Tdm8_H5j8Ln9Ng"
                 ]
             ],
             "human_tasks": [
