firefox 59.0.2 - added ship graphid.

--- a/inflight/firefox/firefox-release-59.0.2.json
+++ b/inflight/firefox/firefox-release-59.0.2.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "ScnkAhV0Tdm8_H5j8Ln9Ng"
+                ],
+                [
+                    "ship",
+                    "Mnes1fBTRKuj0_hmmKz-Yw"
                 ]
             ],
             "human_tasks": [
