fennec 59.0.2 - added ship graphid.

--- a/inflight/fennec/fennec-release-59.0.2.json
+++ b/inflight/fennec/fennec-release-59.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "ZQSqFLOdTsGDaW6fqlbUew"
+                ],
+                [
+                    "ship",
+                    "XmltMoP9QpSBDkgEjV8BIA"
                 ]
             ],
             "human_tasks": [
