--- a/inflight/fennec/fennec-release-59.0.2.json
+++ b/inflight/fennec/fennec-release-59.0.2.json
@@ -25,7 +25,7 @@
                     "alias": "ship",
                     "description": "push to google play",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/mobile/howto.md",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
