firefox 59.0.2 - updated inflight issue. Resolved ('3',)

--- a/inflight/firefox/firefox-release-59.0.2.json
+++ b/inflight/firefox/firefox-release-59.0.2.json
@@ -69,7 +69,7 @@
                     "bug": "none",
                     "description": "snap failed",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 },
                 {
