--- a/inflight/firefox/firefox-release-59.0.3.json
+++ b/inflight/firefox/firefox-release-59.0.3.json
@@ -40,6 +40,12 @@
                     "description": "signoff in Balrog",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto.md#obtain-sign-offs-for-changes",
                     "resolved": false
+                },
+                {
+                    "alias": "",
+                    "description": "Update bouncer locations for Firefox-stub-f135 (Bug 1450463)",
+                    "docs": "",
+                    "resolved": false
                 }
             ],
             "issues": []
