firefox 59.0.3 - added push graphid.

--- a/inflight/firefox/firefox-release-59.0.3.json
+++ b/inflight/firefox/firefox-release-59.0.3.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "AK6e5YpyQlG1VAxjh351nQ"
+                ],
+                [
+                    "push",
+                    "ZTh7GY28TJOV_koBWgJPEA"
                 ]
             ],
             "human_tasks": [
