firefox 59.0.3 - added ship graphid.

--- a/inflight/firefox/firefox-release-59.0.3.json
+++ b/inflight/firefox/firefox-release-59.0.3.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "ZTh7GY28TJOV_koBWgJPEA"
+                ],
+                [
+                    "ship",
+                    "bU5NzXVzTPe4vIgCJ0h-hQ"
                 ]
             ],
             "human_tasks": [
