firefox 59.0.3 - updated inflight tasks. Resolved ('6',)

--- a/inflight/firefox/firefox-release-59.0.3.json
+++ b/inflight/firefox/firefox-release-59.0.3.json
@@ -53,7 +53,7 @@
                     "alias": "",
                     "description": "Update bouncer locations for Firefox-stub-f135 (Bug 1450463)",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
