--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -67,6 +67,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "asasaki"
+                },
+                {
+                    "bug": "1446160",
+                    "description": "all secondary update verifies fail due to lack of automated diffing",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
                 }
             ]
         }
