firefox 60.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -65,7 +65,7 @@
                     "bug": "1441353",
                     "description": "addonscript failure without automatic rerun",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 },
                 {
