firefox 60.0rc - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -72,7 +72,7 @@
                     "bug": "1446160",
                     "description": "all secondary update verifies fail due to lack of automated diffing",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
