firefox 60.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "aB3RQPVESoyWn86O5BHdpg"
+                ],
+                [
+                    "ship_rc",
+                    "Z1-A6RxOSoqm48NCCAprLA"
                 ]
             ],
             "human_tasks": [
