--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -85,6 +85,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "sfraser"
+                },
+                {
+                    "bug": "1458479",
+                    "description": "RC bouncer updates only added partials",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
                 }
             ]
         }
