firefox 60.0rc - updated inflight issue. Resolved ('3',)

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -82,8 +82,8 @@
                 {
                     "bug": "1458489",
                     "description": "Balrog secondary task did not update beta/beta-cdntest",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "sfraser"
                 },
                 {
