fennec 60.0 - added ship graphid.

--- a/inflight/fennec/fennec-release-60.0.json
+++ b/inflight/fennec/fennec-release-60.0.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "eisFhDYhRt2FGsq0vMl8Xw"
+                ],
+                [
+                    "ship",
+                    "UluPJy4OQ-Ws4B4fT5O0rw"
                 ]
             ],
             "human_tasks": [
