fennec 60.0 - updated inflight issue.

--- a/inflight/fennec/fennec-release-60.0.json
+++ b/inflight/fennec/fennec-release-60.0.json
@@ -28,7 +28,15 @@
                     "resolved": true
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "this should have been an rc. how to protect against this?",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
+                }
+            ]
         }
     ],
     "preflight": {
