fennec 60.0 - updated inflight issue. Resolved ('1',)

--- a/inflight/fennec/fennec-release-60.0.json
+++ b/inflight/fennec/fennec-release-60.0.json
@@ -33,7 +33,7 @@
                     "bug": "none",
                     "description": "this should have been an rc. how to protect against this?",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
