firefox 60.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "H8sEEXySSqSQdAcbaM8VjA"
+                ],
+                [
+                    "ship_rc",
+                    "UZ1SzyoKQuCQWNw5DD3We"
                 ]
             ],
             "human_tasks": [
