firefox 60.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -11,7 +11,7 @@
                 ],
                 [
                     "ship_rc",
-                    "UZ1SzyoKQuCQWNw5DD3We"
+                    "UZ1SzyoKQuCQWNw5DD3Wew"
                 ]
             ],
             "human_tasks": [
