firefox 60.0rc - added push graphid.

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "UZ1SzyoKQuCQWNw5DD3Wew"
+                ],
+                [
+                    "push",
+                    "QMFdXFzlTYOWa6dutwQ-yg"
                 ]
             ],
             "human_tasks": [
