firefox 60.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -73,7 +73,7 @@
                     "bug": "none",
                     "description": "ran ship instead of push phase",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
