firefox 60.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-60.0rc.json
+++ b/inflight/firefox/firefox-release-rc-60.0rc.json
@@ -14,7 +14,7 @@
                     "UZ1SzyoKQuCQWNw5DD3Wew"
                 ],
                 [
-                    "push",
+                    "ship",
                     "QMFdXFzlTYOWa6dutwQ-yg"
                 ]
             ],
