firefox 61.0rc - updated prerequisites.

--- a/upcoming/firefox/firefox-release-rc-61.0rc.json
+++ b/upcoming/firefox/firefox-release-rc-61.0rc.json
@@ -59,7 +59,14 @@
         }
     ],
     "preflight": {
-        "human_tasks": []
+        "human_tasks": [
+            {
+                "bug": "1441353",
+                "deadline": "2018-05-09",
+                "description": "from callek: 'need to manually upload the locale oc language pack at next rc, the task itself will fail out due to the issue so will be visible'",
+                "resolved": false
+            }
+        ]
     },
     "product": "firefox",
     "version": "61.0rc"
