fennec 60.0.1 - added promote graphid.

--- a/inflight/fennec/fennec-release-60.0.1.json
+++ b/inflight/fennec/fennec-release-60.0.1.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "Ek7_OwA6R5ezLj52MK5F7Q"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
