firefox 60.0.1 - updated inflight issue.

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -48,7 +48,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1461857",
+                    "description": "langpack signing broken, could be from amo side",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
         }
     ],
     "preflight": {
