--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -3,6 +3,59 @@
     "inflight": [
         {
             "aborted": false,
+            "buildnum": 2,
+            "graphids": [],
+            "human_tasks": [
+                {
+                    "alias": "shipit",
+                    "description": "submit to Shipit",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Starting_a_Release#Submit_to_Ship_It",
+                    "resolved": true
+                },
+                {
+                    "alias": "wnp",
+                    "description": "setup whatsnew page",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto-rc.md",
+                    "resolved": false
+                },
+                {
+                    "alias": "mirrors",
+                    "description": "pushed to mirrors/releases",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto.md#push-artifacts-to-releases-directory",
+                    "resolved": false
+                },
+                {
+                    "alias": "ship",
+                    "description": "schedule the release for shipping",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto.md#ship-the-release",
+                    "resolved": false
+                },
+                {
+                    "alias": "signoff",
+                    "description": "signoff in Balrog",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto.md#obtain-sign-offs-for-changes",
+                    "resolved": false
+                },
+                {
+                    "alias": "",
+                    "description": "bump bouncer aliases for funnelcake 133, 134, 135 once 60.0.1 ships",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1452807#c25",
+                    "resolved": false
+                }
+            ],
+            "issues": [
+                {
+                    "bug": "1461857",
+                    "description": "langpack signing broken, could be from amo side",
+                    "future_threat": true,
+                    "id": 1,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
+        },
+        {
+            "aborted": true,
             "buildnum": 1,
             "graphids": [
                 [
