firefox 60.0.1 - added promote graphid.

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 2,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "F2dVX6m6QPCsy5EnhFUfSg"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
