firefox 60.0.1 - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -52,9 +52,9 @@
                 {
                     "bug": "1461857",
                     "description": "langpack signing broken, could be from amo side",
-                    "future_threat": true,
+                    "future_threat": false,
                     "id": 1,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 }
             ]
