firefox 60.0.1 - updated inflight issue.

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -56,6 +56,13 @@
                     "id": 1,
                     "resolved": true,
                     "who": "jlund"
+                },
+                {
+                    "bug": "1461895",
+                    "description": "l10n repacks intermittently end early",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
                 }
             ]
         },
