firefox 60.0.1 - added push graphid.

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "F2dVX6m6QPCsy5EnhFUfSg"
+                ],
+                [
+                    "push",
+                    "OilHLYU4Q4eSq95i4L2caA"
                 ]
             ],
             "human_tasks": [
