fennec 60.0.1 - added ship graphid.

--- a/inflight/fennec/fennec-release-60.0.1.json
+++ b/inflight/fennec/fennec-release-60.0.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "Ek7_OwA6R5ezLj52MK5F7Q"
+                ],
+                [
+                    "ship",
+                    "Bw_avC2-R_yO1qrRWWaCXQ"
                 ]
             ],
             "human_tasks": [
