firefox 60.0.1 - added ship graphid.

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "OilHLYU4Q4eSq95i4L2caA"
+                ],
+                [
+                    "ship",
+                    "XpKksAlIT6eX3r5c6LoIVg"
                 ]
             ],
             "human_tasks": [
