firefox 60.0.1 - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-60.0.1.json
+++ b/inflight/firefox/firefox-release-60.0.1.json
@@ -69,7 +69,7 @@
                     "bug": "1461895",
                     "description": "l10n repacks intermittently end early",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 },
                 {
