thunderbird 52.8.0 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-52.8.0.json
+++ b/inflight/thunderbird/thunderbird-release-52.8.0.json
@@ -37,7 +37,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1462429",
+                    "description": "no notification of steps/progress after manual rerun of repack 4, which finished two hours ago",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
         }
     ],
     "preflight": {
