--- a/inflight/firefox/firefox-release-60.0.2.json
+++ b/inflight/firefox/firefox-release-60.0.2.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "K0R9k4t7SHupumGQLwA7Rw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
