--- a/inflight/fennec/fennec-release-60.0.2.json
+++ b/inflight/fennec/fennec-release-60.0.2.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "ECdfSj3ITc6qWYOoc77Csw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
