firefox 60.0.2 - added push graphid.

--- a/inflight/firefox/firefox-release-60.0.2.json
+++ b/inflight/firefox/firefox-release-60.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "K0R9k4t7SHupumGQLwA7Rw"
+                ],
+                [
+                    "push",
+                    "Wvh36N0bSYGNiHm2nEJ-Rw"
                 ]
             ],
             "human_tasks": [
