--- a/inflight/firefox/firefox-release-60.0.2.json
+++ b/inflight/firefox/firefox-release-60.0.2.json
@@ -46,7 +46,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "snaps are not being published on the stable channel for 60.0.1 and current 60.0.2. catlee manually updated on snapcraft. Ask jlorenzo about current automation state and whether we need to add more human tasks in mean time",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
         }
     ],
     "preflight": {
