firefox 60.0.2 - added ship graphid.

--- a/inflight/firefox/firefox-release-60.0.2.json
+++ b/inflight/firefox/firefox-release-60.0.2.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "Wvh36N0bSYGNiHm2nEJ-Rw"
+                ],
+                [
+                    "ship",
+                    "dMzfJ0CbSMiiQZCKKeOfrQ"
                 ]
             ],
             "human_tasks": [
