fennec 60.0.2 - added ship graphid.

--- a/inflight/fennec/fennec-release-60.0.2.json
+++ b/inflight/fennec/fennec-release-60.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "ECdfSj3ITc6qWYOoc77Csw"
+                ],
+                [
+                    "ship",
+                    "WqXOWnVvQ96rYAbbmIL31A"
                 ]
             ],
             "human_tasks": [
