firefox 60.0.2 - updated inflight tasks. Resolved ('6',)

--- a/inflight/firefox/firefox-release-60.0.2.json
+++ b/inflight/firefox/firefox-release-60.0.2.json
@@ -53,7 +53,7 @@
                     "alias": "",
                     "description": "as per open snap issue, publishing 60.0.2 to stable snap channel may be manually required",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": [
