firefox 61.0rc - updated inflight issue.

--- a/inflight/firefox/firefox-release-rc-61.0rc.json
+++ b/inflight/firefox/firefox-release-rc-61.0rc.json
@@ -67,6 +67,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "jlund"
+                },
+                {
+                    "bug": "1469456",
+                    "description": "macos signing servers cause exceptions when overloaded",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
                 }
             ]
         }
